website content update

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>This is Client Page</h1>
     <h3>Embedding the script</h3>
     using "script src="./script.js""
-    <script src="./script.js" />
+    <script src="./script.js"></script>
 </body>
 
 </html>
